@@ -1909,12 +1909,11 @@ tags files&quot;) upon startup, or manually using <em>Tools --&gt; Load Tags</em
 tags files, as described below.</p>
 <div class="section" id="workspace-tags">
 <h3><a class="toc-backref" href="#id78">Workspace tags</a></h3>
-<p>Tags for each document are parsed whenever a file is loaded or saved, and
-possibly when modified (see <em>Symbol list update frequency</em> preference in the
-<a class="reference internal" href="#editor-completions-preferences">Editor Completions preferences</a>). These are shown in the Symbol list in
-the Sidebar. These tags are also used for autocompletion of symbols and
-calltips for all documents open in the current session that have the same
-filetype.</p>
+<p>Tags for each document are parsed whenever a file is loaded, saved or
+modified (see <em>Symbol list update frequency</em> preference in the <a class="reference internal" href="#editor-completions-preferences">Editor
+Completions preferences</a>). These are shown in the Symbol list in the
+Sidebar. These tags are also used for autocompletion of symbols and calltips
+for all documents open in the current session that have the same filetype.</p>
 <p>The <em>Go to Tag</em> commands can be used with all workspace tags. See
 <a class="reference internal" href="#go-to-tag-definition">Go to tag definition</a>.</p>
 </div>
@@ -2433,11 +2432,11 @@ displayed.</dd>
 <dt>Symbol list update frequency</dt>
 <dd><p class="first">The minimum delay (in milliseconds) between two symbol list updates.</p>
 <p>This option determines how frequently the tag list is updated for the
-current document. The smaller is the delay the more up-to-date is the
-symbol list (and then the completions); but rebuilding the symbol list
-has a cost in performance, especially with large files.</p>
-<p>The default value is 250, which means the symbol list will be updated at
-most 4 times per second, even if the document changes continuously.</p>
+current document. The smaller the delay, the more up-to-date the symbol
+list (and then the completions); but rebuilding the symbol list has a
+cost in performance, especially with large files.</p>
+<p>The default value is 250ms, which means the symbol list will be updated
+at most four times per second, even if the document changes continuously.</p>
 <p class="last">A value of 0 disables automatic updates, so the symbol list will only be
 updated upon document saving.</p>
 </dd>
@@ -6484,7 +6483,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-03-23 22:34 UTC.
+Generated on: 2011-03-24 02:06 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
