@@ -1,3 +1,9 @@
+2011-03-24  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * doc/geany.txt, doc/geany.html:
+   Update the documentation to talk about real-time tag parsing.
+
+
 2011-03-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/main.c:
